Add jSpecify node.setup.web.support package.